<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DUT_Krajalnica_StanyPodzespolow" Id="{32386f53-7392-4d83-8ef9-2aea37b385e0}">
    <Declaration><![CDATA[TYPE DUT_Krajalnica_StanyPodzespolow :
STRUCT
	bCiecie1_Bazowanie						: BOOL;
	bCiecie1_Ciecie							: BOOL;
	bCiecie1_Naped_WStronePoczatku			: BOOL;
	bCiecie1_Naped_WStroneKonca				: BOOL;			

	bCiecie2_Bazowanie						: BOOL;
	bCiecie2_Ciecie							: BOOL;
	bCiecie2_Naped_WStronePoczatku			: BOOL;
	bCiecie2_Naped_WStroneKonca				: BOOL;			

	bPodawanie_Bazowanie					: BOOL;
	bPodawanie_Podawanie					: BOOL;
	bPodawanie_Zabierak_WStronePoczatku		: BOOL;
	bPodawanie_zabierak_WStroneKonca		: BOOL;
	bPodawanie_Przesuwanie_WStronePoczatku	: BOOL;
	bPodawanie_Przesuwanie_WStroneKonca		: BOOL;

	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>