<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DUT_Symulacja_Parametry" Id="{b38778a6-687f-444f-a629-8117e987e2dc}">
    <Declaration><![CDATA[TYPE DUT_Symulacja_Parametry :
STRUCT
	rCiecie1_BazowanieCzasNaPowrot			: REAL := 2000;
	rCiecie1_CiecieCzasNaCiecie				: REAL := 2000;
	rCiecie1_CiecieCzasNaPowrot				: REAL := 2000;
	
	rCiecie2_BazowanieCzasNaPowrot			: REAL := 2000;
	rCiecie2_CiecieCzasNaCiecie				: REAL := 2000;
	rCiecie2_CiecieCzasNaPowrot				: REAL := 2000;
	
	rPodawanieZabierak_BazowanieCzasNaPowrot	: REAL := 1000;
	rPodawaniePrzesuwanie_BazowanieCzasNaPowrot	: REAL := 2000;
	
	rPodawanieZabierak_PodawanieCzasNaPrace			: REAL := 1000;
	rPodawanieZabierak_PodawanieCzasNaPowrot		: REAL := 1000;
	rPodawaniePrzesuwanie_PodawanieCzasNaPobranie	: REAL := 2000;
	rPodawaniePrzesuwanie_PodawanieCzasNaPodanie	: REAL := 2000;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>